@@ -9,7 +9,7 @@ executables = [cx_Freeze.Executable("client.py", base = base,icon="load/icon.ico
 
 cx_Freeze.setup(
     name="iSPTC",
-    version="1.02",
+    version="1.02b",
     options={"build_exe": {"packages":["os","platform","socket","threading","Tkinter","time","random"],
                            "include_files":["load/icon.ico","load/beep1.wav","load/icon.png","load/settings.cfg","load/server.cfg","load/icon2.png","load/icon2.ico","load/serverlist","changelog.txt"]}},
     executables = executables
